
cc_library(
	name = "pool",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_throw_exception//:throw_exception"
	],
)
