
cc_library(
	name = "pool",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_thread//:thread",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_throw_exception//:throw_exception"
	],
)
